E1-869 tabs alignment issue fix
E1-869 tabs alignment issue fix

--- a/ui.frontend/src/main/webpack/etisalat/styles/core-components/tabs/_tabs.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/core-components/tabs/_tabs.scss
@@ -160,6 +160,24 @@
       }
     }
   }
+
+  &.cmp-tabs-align-center {
+    @include respond-to-max(991px) {
+      .config-section-wrap {
+        .justify-content-md-center {
+          justify-content: center;
+        }
+      }
+    }
+
+    @include respond-to-max(768px) {
+      .cmp_tabs-swipper .page-nav .swiper-slide,
+      .cmp_tabs-swipper .page-nav li {
+        align-items: center;
+        padding-bottom: 0 !important;
+      }
+    }
+  }
 }
 
 .container-fix__fluid {
